# agentcompat

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
docs/: architecture.md  change-attribution.md  extensions.md  github-action.md  schema-support.md
examples/github-action/: fail-policy.json  malformed-policy.json  malformed-traces.jsonl  pass-policy.json  workflow.yml
examples/order-api/: baseline.json  candidate.json  openai-traces.jsonl  suite.json  traces.jsonl
scripts/: quality.py
src/agentcompat/: __init__.py  __main__.py  analyzer.py  benchmark.py  changes.py  cli.py  evaluation.py  extensions.py  github_action.py  io.py  models.py  report.py  validator.py
tests/: test_analyzer.py  test_benchmark.py  test_changes.py  test_cli.py  test_conformance.py  test_evaluation.py  test_examples.py  test_extensions.py  test_github_action.py  test_io.py  test_report.py  test_schema_support_doc.py  test_trace_adapters.py  test_validator.py
tests/fixtures/: json-schema-subset.json
