[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcompat"
version = "0.1.0"
description = "Trace-driven compatibility testing for evolving LLM tool schemas."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Arman Zareian" }]
keywords = ["llm", "agents", "json-schema", "testing", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]

[project.scripts]
agentcompat = "agentcompat.cli:main"

[project.urls]
Homepage = "https://github.com/armanzareian/agentcompat"
Issues = "https://github.com/armanzareian/agentcompat/issues"
Repository = "https://github.com/armanzareian/agentcompat"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["agentcompat"]

[tool.coverage.report]
fail_under = 85
show_missing = true
